# vault.shortest_common_superstring

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci_tests.yml
benchmarks/: CMakeLists.txt  amac.results.2026-02-22T17-43.35a6b2b.txt  amac.results.2026-02-22T19-16.669481c.txt  amac.results.2026-02-22T19-51.8c38a8b.txt  amac.results.2026-02-22T20-25.d1baa61.txt  benchmarks.amac.cpp  benchmarks.amac_dynamic.cpp  benchmarks.amac_pipeline.cpp  benchmarks.flat_map.cpp  benchmarks.frozen_vector.cpp  benchmarks.fsst_dictionary.cpp  benchmarks.hpp  benchmarks.map_view.cpp  benchmarks.map_view.hpp  benchmarks.map_view.impl.cpp  benchmarks.proxy_sort.cpp  benchmarks.segmented_vector.cpp  benchmarks.shortest_common_superstring.cpp  benchmarks.static_index.cpp  benchmarks.unroll.cpp  flat_map.results.2026-02-21T10-45.a4d46e4.txt  results.2026-01-27T21:19:32.txt  results.2026-02-21T11-01.d1ad296.txt
cmake/: LazyFlatBuffers.cmake  appleclang-toolchain.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake  package-config-file.cmake.in  vault-config-file-package.cmake  vault-configure.cmake  vault-utils.cmake
data/: democracy_and_education.txt
examples/: CMakeLists.txt
include/vault/algorithm/: amac.hpp  amac_chunked.hpp  amac_dynamic.hpp  amac_pipeline.hpp  fsst_dictionary.hpp  functional.hpp  knuth_morris_pratt_failure_function.hpp  knuth_morris_pratt_overlap.hpp  knuth_morris_pratt_searcher.hpp  shortest_common_superstring.hpp
include/vault/allocators/: hpallocator.hpp
include/vault/flat_map/: aliases.hpp  concepts.hpp  eytzinger_layout_policy.hpp  implicit_btree_layout_policy.hpp  layout_iterator.hpp  layout_map.hpp  sorted_layout_policy.hpp  utilities.hpp
include/vault/flatbuffers/: flatbuffers.hpp
include/vault/frozen_vector/: concepts.hpp  freeze_traits.hpp  frozen_vector.hpp  frozen_vector_builder.hpp  local_shared_ptr.hpp  local_shared_storage_policy.hpp  shared_storage_policy.hpp  traits.hpp  unique_storage_policy.hpp
include/vault/map_view/: map_view.hpp
include/vault/segmented_vector/: segmented_vector.hpp
include/vault/static_index/: static_index.hpp  traits.hpp
include/vault/string_arena/: string.hpp  string_arena.hpp
include/vault/unroll/: unroll.hpp
scripts/: generate_lazy_traits.py
src/vault/algorithm/: CMakeLists.txt  fsst_dictionary.cpp  internal.cpp  internal.hpp
src/vault/allocators/: CMakeLists.txt
src/vault/flat_map/: CMakeLists.txt  CMakeLists.txt~  implicit_btree_layout_policy.cpp
src/vault/flatbuffers/: CMakeLists.txt
src/vault/frozen_vector/: CMakeLists.txt
src/vault/map_view/: CMakeLists.txt
src/vault/segmented_vector/: CMakeLists.txt
src/vault/static_index/: CMakeLists.txt  static_index.cpp
src/vault/string_arena/: CMakeLists.txt  string_arena.cpp
src/vault/tidy/: CMakeLists.txt  CMakeLists.txt~  callable-observation-check.cpp  callable-observation-check.hpp  multiple-bool-parameters-check.cpp  multiple-bool-parameters-check.hpp  pass-by-small-value-check.cpp  pass-by-small-value-check.hpp  pointer-chasing-type-check.cpp  pointer-chasing-type-check.hpp  prefer-array-over-vector-check.cpp  prefer-array-over-vector-check.hpp  require-borrowed-ptr-decorator-check.cpp  require-borrowed-ptr-decorator-check.hpp  require-in-out-decorators-check.cpp  require-in-out-decorators-check.hpp  require-mut-tag-check.cpp  require-mut-tag-check.hpp  smart-ptr-observation-check.cpp  smart-ptr-observation-check.hpp  use-view-types-check.cpp  use-view-types-check.hpp  vault-tidy-module.cpp
src/vault/unroll/: CMakeLists.txt
tests/vault/algorithm/: CMakeLists.txt  amac.test.cpp  amac_chunked.test.cpp  amac_dynamic.test.cpp  amac_pipeline.test.cpp  fsst_dictionary.test.cpp  knuth_morris_pratt_searcher.test.cpp  shortest_common_superstring.test.cpp
tests/vault/allocators/: CMakeLists.txt  allocators.test.cpp
tests/vault/flat_map/: CMakeLists.txt  flat_map.test.cpp
tests/vault/flatbuffers/: CMakeLists.txt  flatbuffers.test.cpp  monster.fbs  world.fbs
tests/vault/frozen_vector/: CMakeLists.txt  frozen_vector.test.cpp  frozen_vector.tests.cpp
tests/vault/map_view/: CMakeLists.txt  map_view.test.cpp  vault.map_view.tests.cpp
tests/vault/segmented_vector/: CMakeLists.txt  segmented_vector.test.cpp
tests/vault/static_index/: CMakeLists.txt  static_index.test.cpp  static_index.test.extensive.cpp  static_index.test.laptop.cpp
tests/vault/tidy/: CMakeLists.txt
tests/vault/unroll/: CMakeLists.txt  unroll.test.cpp
